--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,9 +33,17 @@ dependencies {
     implementation 'com.android.support:cardview-v7:28.0.0-alpha3'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
 
+
+    //firebase
+    implementation 'com.google.firebase:firebase-core:16.0.1'
+    implementation 'com.google.firebase:firebase-auth:16.0.2'
+    implementation 'com.google.firebase:firebase-firestore:17.0.3'
     // ButterKnife (for code brevity)
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+
+    // FirebaseUI for Cloud Firestore
+    implementation 'com.firebaseui:firebase-ui-firestore:4.1.0'
 
     //rating bar
     implementation 'me.zhanghai.android.materialratingbar:library:1.2.0'
@@ -45,3 +53,5 @@ dependencies {
     implementation "android.arch.lifecycle:extensions:1.1.1"
     annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
 }
+
+apply plugin: 'com.google.gms.google-services'
