added sweet dialogues to the codebase

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,9 @@ dependencies {
     //qr scanner
     implementation 'com.budiyev.android:code-scanner:1.9.4'
 
+    //sweet alert dialogue
+    implementation 'com.github.f0ris.sweetalert:library:1.5.1'
+
     //architecture components
     // ViewModel and LiveData
     implementation "android.arch.lifecycle:extensions:1.1.1"
