--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,20 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:scheme="http"
+                    android:host="darasastudent.page.link" />
+                <data
+                    android:scheme="https"
+                    android:host="darasastudent.page.link" />
+            </intent-filter>
+
         </activity>
         <activity android:name=".ui.ScanActivity"
             android:parentActivityName=".ui.MainActivity"/>
