--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,6 +55,7 @@
         <activity android:name=".ui.SignupActivity"
             android:parentActivityName=".ui.WelcomeActivity"
             />
+        <activity android:name=".ui.SettingsActivity" />
     </application>
 
 </manifest>
