--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,6 +56,7 @@
             android:parentActivityName=".ui.WelcomeActivity"
             />
         <activity android:name=".ui.SettingsActivity" />
+        <activity android:name=".ui.CurrentSetupActivity" />
     </application>
 
 </manifest>
