--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,6 +57,7 @@
             />
         <activity android:name=".ui.SettingsActivity" />
         <activity android:name=".ui.CurrentSetupActivity" />
+        <activity android:name=".ui.AccountSetupActivity" />
     </application>
 
 </manifest>
