added faq to manifest #bug20 fixed

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,6 +64,9 @@
         <activity android:name=".ui.AccountSetupActivity"
             android:parentActivityName=".ui.SettingsActivity"
             />
+        <activity android:name=".ui.FaqActivity"
+            android:parentActivityName=".ui.SettingsActivity"
+            />
     </application>
 
 </manifest>
