designed the single class

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,9 @@ dependencies {
     //multiselect dialogue
     implementation 'com.github.abumoallim:Android-Multi-Select-Dialog:v1.9'
 
+    //gthumb
+    implementation 'com.hbb20:gthumb:1.3'
+
     //architecture components
     // ViewModel and LiveData
     implementation "android.arch.lifecycle:extensions:1.1.1"
