super fast scan major fix: ver 0.0.9

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,25 +48,25 @@
             android:value="@integer/google_play_services_version"
             tools:replace="android:value" />
 
-        <activity android:name=".ui.LoginActivity"
-            android:parentActivityName=".ui.WelcomeActivity"
-
-            />
-        <activity android:name=".ui.SignupActivity"
-            android:parentActivityName=".ui.WelcomeActivity"
-            />
-        <activity android:name=".ui.SettingsActivity"
-            android:parentActivityName=".ui.MainActivity"
-            />
-        <activity android:name=".ui.CurrentSetupActivity"
-            android:parentActivityName=".ui.SettingsActivity"
-            />
-        <activity android:name=".ui.AccountSetupActivity"
-            android:parentActivityName=".ui.SettingsActivity"
-            />
-        <activity android:name=".ui.FaqActivity"
-            android:parentActivityName=".ui.SettingsActivity"
-            />
+        <activity
+            android:name=".ui.LoginActivity"
+            android:parentActivityName=".ui.WelcomeActivity" />
+        <activity
+            android:name=".ui.SignupActivity"
+            android:parentActivityName=".ui.WelcomeActivity" />
+        <activity
+            android:name=".ui.SettingsActivity"
+            android:parentActivityName=".ui.MainActivity" />
+        <activity
+            android:name=".ui.CurrentSetupActivity"
+            android:parentActivityName=".ui.SettingsActivity" />
+        <activity
+            android:name=".ui.AccountSetupActivity"
+            android:parentActivityName=".ui.SettingsActivity" />
+        <activity
+            android:name=".ui.FaqActivity"
+            android:parentActivityName=".ui.SettingsActivity" />
+        <activity android:name=".ui.QReaderActivity"></activity>
     </application>
 
 </manifest>
