--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,7 +56,7 @@ dependencies {
     implementation 'io.nlopez.smartlocation:library:3.3.3'
 
     //qr scanner
-    implementation 'com.budiyev.android:code-scanner:1.9.4'
+    implementation  'com.dlazaro66.qrcodereaderview:qrcodereaderview:2.0.3'
 
     //sweet alert dialogue
     implementation 'com.github.f0ris.sweetalert:library:1.5.1'
