designed main activity looks :)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,12 @@ dependencies {
     //gif support
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.15'
 
+    //picasso image processing lib + offline
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
+    //circular imageview
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
+
     //architecture components
     // ViewModel and LiveData
     implementation "android.arch.lifecycle:extensions:1.1.1"
