duplicated nearby activity from lec app

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -79,6 +79,7 @@
             android:name=".ui.FaqActivity"
             android:parentActivityName=".ui.SettingsActivity" />
         <activity android:name=".ui.QReaderActivity"/>
+        <activity android:name=".ui.NearbyActivity"/>
     </application>
 
 </manifest>
