--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,6 +83,12 @@ dependencies {
     implementation 'com.google.android.gms:play-services-nearby:15.0.1'
 
     //architecture components
+
+    // Room components
+    implementation "android.arch.persistence.room:runtime:1.1.1"
+    annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
+    androidTestImplementation "android.arch.persistence.room:testing:1.1.1"
+
     // ViewModel and LiveData
     implementation "android.arch.lifecycle:extensions:1.1.1"
     annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
