--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,10 +37,12 @@ dependencies {
     implementation 'com.android.support:multidex:1.0.3'
 
     //firebase
-    implementation 'com.google.firebase:firebase-core:16.0.3'
-    implementation 'com.google.firebase:firebase-auth:16.0.3'
-    implementation 'com.google.android.gms:play-services-auth:16.0.0'
-    implementation 'com.google.firebase:firebase-firestore:17.1.0'
+    implementation 'com.google.firebase:firebase-core:16.0.4'
+    implementation 'com.google.firebase:firebase-auth:16.0.4'
+    implementation 'com.google.android.gms:play-services-auth:16.0.1'
+    implementation 'com.google.firebase:firebase-firestore:17.1.1'
+    implementation 'com.google.firebase:firebase-config:16.0.1'
+
 
     // ButterKnife (for code brevity)
     implementation 'com.jakewharton:butterknife:8.8.1'
@@ -78,6 +80,7 @@ dependencies {
 
     //circular imageview
     implementation 'de.hdodenhof:circleimageview:2.2.0'
+
 
     //architecture components
 
