--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,6 +60,12 @@
             android:name="com.google.android.nearby.messages.API_KEY"
             android:value="AIzaSyDMu5NAQRU1j1xRbOGN3v85M-CN9FP5rys" />
 
+        <service android:name=".services.MyFirebaseMessagingService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+
         <activity
             android:name=".ui.LoginActivity"
             android:parentActivityName=".ui.WelcomeActivity" />
@@ -79,7 +85,7 @@
             android:name=".ui.FaqActivity"
             android:parentActivityName=".ui.SettingsActivity" />
         <activity android:name=".ui.QReaderActivity"/>
-        <activity android:name=".ui.NearbyActivity"/>
+
     </application>
 
 </manifest>
