--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore:17.1.1'
     implementation 'com.google.firebase:firebase-config:16.0.1'
     implementation 'com.google.firebase:firebase-messaging:17.3.3'
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.6'
 
 
     // ButterKnife (for code brevity)
