--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,13 +2,13 @@ apply plugin: 'com.android.application'
 apply plugin: 'io.fabric'
 
 android {
-    compileSdkVersion 'android-P'
-    buildToolsVersion "27.0.3"
+    compileSdkVersion 28
+    buildToolsVersion '28.0.3'
 
     defaultConfig {
         applicationId "com.job.darasastudent"
         minSdkVersion 19
-        targetSdkVersion 27
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -26,30 +26,35 @@ android {
 }
 
 dependencies {
+    def support_version = "28.0.0-alpha1"
+    def lifecycle_version = "1.1.1"
+    def room_version = "1.1.1"
+    def firebase_common = "16.0.4"
+    def butterknife_version ="8.8.1"
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:28.0.0-alpha1'
-    implementation 'com.android.support:support-vector-drawable:28.0.0-alpha1'
-    implementation 'com.android.support:support-v4:28.0.0-alpha1'
-    implementation 'com.android.support:design:28.0.0-alpha1'
-    implementation 'com.android.support:cardview-v7:28.0.0-alpha1'
+    implementation "com.android.support:appcompat-v7:$support_version"
+    implementation "com.android.support:support-vector-drawable:$support_version"
+    implementation "com.android.support:support-v4:$support_version"
+    implementation "com.android.support:design:$support_version"
+    implementation "com.android.support:cardview-v7:$support_version"
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 
     //If your minSdkVersion is lower than 21
     implementation 'com.android.support:multidex:1.0.3'
 
     //firebase
-    implementation 'com.google.firebase:firebase-core:16.0.4'
-    implementation 'com.google.firebase:firebase-auth:16.0.4'
+    implementation "com.google.firebase:firebase-core:$firebase_common"
+    implementation "com.google.firebase:firebase-auth:$firebase_common"
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
     implementation 'com.google.firebase:firebase-firestore:17.1.1'
     implementation 'com.google.firebase:firebase-config:16.0.1'
     implementation 'com.google.firebase:firebase-messaging:17.3.3'
     implementation 'com.crashlytics.sdk.android:crashlytics:2.9.6'
 
-
     // ButterKnife (for code brevity)
-    implementation 'com.jakewharton:butterknife:8.8.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    implementation "com.jakewharton:butterknife:$butterknife_version"
+    annotationProcessor "com.jakewharton:butterknife-compiler:$butterknife_version"
 
     // FirebaseUI for Cloud Firestore
     implementation 'com.firebaseui:firebase-ui-firestore:4.1.0'
@@ -61,7 +66,7 @@ dependencies {
     implementation 'io.nlopez.smartlocation:library:3.3.3'
 
     //qr scanner
-    implementation  'com.dlazaro66.qrcodereaderview:qrcodereaderview:2.0.3'
+    implementation 'com.dlazaro66.qrcodereaderview:qrcodereaderview:2.0.3'
 
     //sweet alert dialogue
     implementation 'com.github.f0ris.sweetalert:library:1.5.1'
@@ -84,17 +89,16 @@ dependencies {
     //circular imageview
     implementation 'de.hdodenhof:circleimageview:2.2.0'
 
-
     //architecture components
 
     // Room components
-    implementation "android.arch.persistence.room:runtime:1.1.1"
-    annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
-    androidTestImplementation "android.arch.persistence.room:testing:1.1.1"
+    implementation "android.arch.persistence.room:runtime:$room_version"
+    annotationProcessor "android.arch.persistence.room:compiler:$room_version"
+    androidTestImplementation "android.arch.persistence.room:testing:$room_version"
 
     // ViewModel and LiveData
-    implementation "android.arch.lifecycle:extensions:1.1.1"
-    annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
+    implementation "android.arch.lifecycle:extensions:$lifecycle_version"
+    annotationProcessor "android.arch.lifecycle:compiler:$lifecycle_version"
 }
 
 apply plugin: 'com.google.gms.google-services'
