--- a/app/.gitignore
+++ b/app/.gitignore
@@ -1,3 +1,12 @@
 /build
 /app/google-services.json
+/local.properties
+/.idea/libraries
+/.idea/modules.xml
+/.idea/workspace.xml
+.DS_Store
+/captures
+.externalNativeBuild
+libs/
+/.idea/
 
