added context menu lib

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,6 +97,9 @@ dependencies {
     //generic adapter
     implementation "com.leodroidcoder:generic-adapter:1.0.1"
 
+    //context menu
+    implementation 'com.github.Yalantis:Context-Menu.Android:1.0.8'
+
     //architecture components
 
     // Room components
