tool_bar_height dimen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -103,6 +103,7 @@
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:theme="@style/SplashScreenTheme">
         </activity>
+        <activity android:name=".ui.AdvertClassActivity" />
     </application>
 
 </manifest>
